# phiplot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
gecko/: geckoq.molecules.json
phiplot/: __init__.py  main.py
phiplot/assets/defaults/: clustering_hyperparams.json  fingerprinting_hyperparams.json  interactive_embedding_hyperparams.json  kernel_hyperparams.json  static_embedding_hyperparams.json
phiplot/assets/docs/: ABOUT.md  HELP.md
phiplot/assets/templates/: metrics_display.html  mol_info_box.html  molecule_gallery.html  molecule_tooltips.html  regressors_display.html  simple_table.html
phiplot/modules/: __init__.py
phiplot/modules/ATMOMACCS/: ATMOMACCS_v5.py  __init__.py  atmomaccs_generator.py
phiplot/modules/clustering/: __init__.py  cluster_embedder.py  clusterer.py  param_parser.py
phiplot/modules/data/db/: __init__.py  client.py
phiplot/modules/data/handlers/: __init__.py  clustering_data_handler.py  data_handler.py  embedding_data_handler.py  molecule_handler.py
phiplot/modules/embedding/: __init__.py  embedder.py  embedding_handler.py  embedding_metrics.py  kernels.py  nystroem.py
phiplot/modules/plotting/: __init__.py  debouncer.py  event_handlers.py  highlighter.py  interactive_plot.py  line_segments.py  summary_plots.py  tracked_point_scatter.py
phiplot/modules/ui/: __init__.py  web_ui.py
phiplot/modules/ui/floating/: __init__.py  window_panel.py
phiplot/modules/ui/menus/: __init__.py  base_menu.py  clustering_appearance_menu.py  clustering_menu.py  data_menu.py  embedding_menu.py  (+5 more)
phiplot/modules/utils/: __init__.py  default_param_parser.py
(+17 files in other folders)
